--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /* bar.css ou style.css */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+  font-family: "Poppins", sans-serif;
+}
 /* Styles de base */
 body {
   margin: 0;
@@ -31,7 +35,9 @@ body {
 .nav-links ul li a {
   color: white;
   text-decoration: none;
+  
 }
+
 
 .menu-icon {
   display: none;
@@ -72,43 +78,6 @@ body {
         }
         
     }
-.page1 {
-  
-  background-image: url("img1.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100vh;
-  width: 100%;
-  border-radius: 36px;
 
-  display: flex;
-  align-items: flex-end; /* aligne le contenu en bas */
-  justify-content: center; /* centre horizontalement */
-  padding-bottom: -20px; /* espace depuis le bas */
-  color: white;
-  font-size: 100px;
-  font-weight: bold;
-  text-shadow: 1px 1px 4px black;
-  text-align: center;
-}
 
-/* Bouton WhatsApp en haut à droite */
-.whatsapp-button {
-  /* position: absolute; */
-  top: 20px;
-  right: 20px;
-  background-color: #25D366;
-  color: white;
-  padding: 10px 18px;
-  border-radius: 8px;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 14px;
-  transition: background-color 0.3s;
-}
-
-.whatsapp-button:hover {
-  background-color: #1ebe57;
-}
 
