--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   height: 100vh;
   width: 100%;
-  border-radius: 36px;
+  /* border-radius: 36px; */
   top: 0%;
   display: flex;
   align-items: flex-end; /* aligne le contenu en bas */
