--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .page1 {
-  background-image: url("img1.jpg");
+  background-image: url("car.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
